# simple-kanban

./: .gitignore  pyproject.toml
backend/: app.py
frontend/: index.html
